Basic overall structure

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -4,3 +4,6 @@
 @import compass/css3
 @import compass_twitter_bootstrap
 @import compass_twitter_bootstrap_awesome
+
+@import partials/structure
+@import partials/menu
