--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -4,3 +4,4 @@
       ul.nav
         li= link_to 'Walter Bishop', root_path, :id => 'name'
         li= link_to 'Episodes', episodes_path
+        li= link_to 'Sidekiq', sidekiq_web_path
